--- a/action.yml
+++ b/action.yml
@@ -1,33 +1,32 @@
 name: "MLSpec Sample Action - Process Data"
 description: "Sample Action Example: Processing Data"
-author: "aronchick"
 inputs:
   METASTORE_CREDENTIALS:
     description: "Some text"
     required: true
-  parameters_directory:
+  PARAMETERS_DIRECTORY:
     description: "Location of the parameters directory. Defaults to '.parameters'"
-    required: True
+    required: false
     default: '.parameters'
-  execution_parameters_file:
+  EXECUTION_PARAMETERS_FILE:
     description: "YAML file detailing the parameters for the process execution."
-    required: true
+    required: false
     default: ".parameters/execution/execution.yaml"
-  schemas_directory: '/src/parameters/test_schemas'
+  SCHEMAS_DIRECTORY: '/src/parameters/test_schemas'
     description: "Directory for all schemas to validate. Must include base schema (if used)."
-    required: true
+    required: false
     default: ".parameters/schemas"
-  step_name:
+  STEP_NAME:
     description: "Name for this step referenced in the workflow."
-    required: true
+    required: false
     default: "process_data"
-  workflow_node_id:
+  WORKFLOW_NODE_ID:
     description: "Workflow to load from the database."
-    required: true
+    required: false
     default: "workflow|999999999999.9.9447|418e92ae-6793-4867-a82d-13e32cf570d2"
-  input_parameters:
+  INPUT_PARAMETERS:
     description: "Input parameters (need to get from previous step, file or DB)"
-    required: true
+    required: false
     default: "foo"
 branding:
   icon: "chevron-up"
