--- a/action.yml
+++ b/action.yml
@@ -1,33 +1,49 @@
-name: "MLSpec Sample Action - Process Data"
-description: "Sample Action Example: Processing Data"
+name: 'Hello World'
+description: 'Greet someone and record the time'
 inputs:
-  METASTORE_CREDENTIALS:
-    description: "Some text"
+  who-to-greet:  # id of input
+    description: 'Who to greet'
     required: true
-  PARAMETERS_DIRECTORY:
-    description: "Location of the parameters directory. Defaults to '.parameters'"
-    required: false
-    default: '.parameters'
-  EXECUTION_PARAMETERS_FILE:
-    description: "YAML file detailing the parameters for the process execution."
-    required: false
-    default: ".parameters/execution/execution.yaml"
-  SCHEMAS_DIRECTORY: '/src/parameters/test_schemas'
-    description: "Directory for all schemas to validate. Must include base schema (if used)."
-    required: false
-    default: ".parameters/schemas"
-  STEP_NAME:
-    description: "Name for this step referenced in the workflow."
-    required: false
-    default: "process_data"
-  WORKFLOW_NODE_ID:
-    description: "Workflow to load from the database."
-    required: false
-    default: "workflow|999999999999.9.9447|418e92ae-6793-4867-a82d-13e32cf570d2"
-  INPUT_PARAMETERS:
-    description: "Input parameters (need to get from previous step, file or DB)"
-    required: false
-    default: "foo"
+    default: 'World'
+outputs:
+  time: # id of output
+    description: 'The time we greeted you'
 runs:
-  using: "docker"
-  image: "Dockerfile"
+  using: 'docker'
+  image: 'Dockerfile'
+  args:
+    - ${{ inputs.who-to-greet }}
+
+# name: "MLSpec Sample Action - Process Data"
+# description: "Sample Action Example: Processing Data"
+# inputs:
+#   METASTORE_CREDENTIALS:
+#     description: "Some text"
+#     required: true
+#   PARAMETERS_DIRECTORY:
+#     description: "Location of the parameters directory. Defaults to '.parameters'"
+#     required: false
+#     default: '.parameters'
+#   EXECUTION_PARAMETERS_FILE:
+#     description: "YAML file detailing the parameters for the process execution."
+#     required: false
+#     default: ".parameters/execution/execution.yaml"
+#   SCHEMAS_DIRECTORY: '/src/parameters/test_schemas'
+#     description: "Directory for all schemas to validate. Must include base schema (if used)."
+#     required: false
+#     default: ".parameters/schemas"
+#   STEP_NAME:
+#     description: "Name for this step referenced in the workflow."
+#     required: false
+#     default: "process_data"
+#   WORKFLOW_NODE_ID:
+#     description: "Workflow to load from the database."
+#     required: false
+#     default: "workflow|999999999999.9.9447|418e92ae-6793-4867-a82d-13e32cf570d2"
+#   INPUT_PARAMETERS:
+#     description: "Input parameters (need to get from previous step, file or DB)"
+#     required: false
+#     default: "foo"
+# runs:
+#   using: "docker"
+#   image: "Dockerfile"
